--- a/Latihan 1/Latihan 2.1
+++ b/Latihan 1/Latihan 2.1
@@ -5,8 +5,12 @@
     <title>Latihan2-1</title>
   </head>
   <body>
-    M.Yusro.
+    Yusro dan Tommy suka nonton bola
     <br /><br />
-    Tommy cucu Walid. 
+    Yusro dan Tommy
+    <br />
+    suka nonton
+    <br />
+    bola
     </body>
 </html>
